<?xml version='1.0' encoding='utf-8'?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2014 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Pocket Paint</string>
    <string name="button_brush">Brush</string>
    <string name="button_cursor">Cursor</string>
    <string name="button_ellipse">Circle/Ellipse</string>
    <string name="button_zoom">Zoom</string>
    <string name="button_pipette">Pipette</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>
    <string name="button_stamp">Stamp</string>
    <string name="button_rectangle">Rectangle</string>
    <string name="button_import_image">Import Image</string>
    <string name="button_eraser">Eraser</string>
    <string name="button_crop">Crop Image</string>
    <string name="button_flip">Flip</string>
    <string name="button_fill">Fill</string>
    <string name="button_move">Move</string>
    <string name="button_rotate">Rotate</string>    
    <string name="button_line">Line</string>
    <string name="cancel">Cancel</string>
    <string name="ok" tools:ignore="Typos">@android:string/ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    
    <string name="terms_of_use_and_service_title">Terms of Use and Service</string>
     <string name="terms_of_use_and_service_content">In order to be allowed to use Pocket Paint and other executables offered by the Catrobat project, you must agree to our Terms of Use and Service and strictly follow them when you use Pocket Code and our other executables. Please see the link below for their precise formulation.\n\n</string>
    <string name="terms_of_use_and_service_url_text">Terms of Use and Service</string>
    <string name="terms_of_use_and_service_link_template" translatable="false">&lt;a href=\"%1$s\">%2$s&lt;/a></string>
    
    <string name="about_title">About Pocket Paint&#8230;</string>
    <string name="about_content">Pocket Paint is a picture editor that is part of the Catrobat project.\n\nCatrobat is a visual programming language and set of creativity tools for smartphones, tablets, and mobile browsers.\n\nThe source code of Pocket Paint is mainly licensed under the %s.\nFor precise details of the license see the link below.\n\n</string>
    <string name="about_license_url_text">Pocket Paint Source Code License</string>
    <string name="about_catroid_url_text">About Catrobat</string>
    <string name="about_link_template" translatable="false">&lt;a href=\"%1$s\">%2$s&lt;/a></string>
    <string name="about_version">Version:</string>
    <string name="stroke_title">"Tool Settings"</string>
    <string name="color_chooser_title">Color Chooser</string>
    <string name="color_rgb">Red Green Blue (RGB)</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_alpha">Alpha</string>
    <string name="color_pre">preselected</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_save_title">Save Picture</string>
    <string name="dialog_save_text">Input Filename</string>
    <string name="dialog_load">Loading&#8230;</string>
    <string name="dialog_overwrite_text">Overwrite an existing file?</string>
    <string name="dialog_error_save_title">Error load/save File</string>
    <string name="dialog_error_sdcard_text">Check Image or SD-Card!</string>
    <string name="dialog_brush_width_text">Stroke Width</string>
    <string name="dialog_warning_new_image">Save Changes?</string>
    <string name="help_title">Help</string>
    <string name="help_content_ellipse">Move and resize the circle or transform it to an ellipse. Tap to paint the shape on the image</string>
    <string name="help_content_flip">Tap on the symbols on the bottom bar to flip the image.</string>
    <string name="help_content_eraser">Remove parts of the image like with an eraser.</string>
    <string name="help_content_move">Use your finger to move the image around.</string>
    <string name="help_content_zoom">Tap on the symbols on the bottom bar to zoom in or zoom out.</string>
    <string name="help_content_brush">Tap on the symbols on the bottom bar to change the color or the brush size.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
    <string name="help_content_fill">Tap on the image to fill an area with the selected color.</string>
    <string name="help_content_cursor">Position the cursor where you want to draw. Tap to activate the cursor. Move your finger to draw. Tap again to deactivate.</string>
    <string name="help_content_crop">Use to crop the the image.</string>
    <string name="help_content_stamp">Move and resize the rectangle to cover the area you want to stamp. Tap to select the area. Move and Tap again to stamp.</string>
    <string name="help_content_rectangle">Move and resize the Rectangle. Tap to paint the rectangle on the image.</string>
    <string name="help_content_import_png">Import an image from the gallery to the stamp tool.</string>
    <string name="help_content_rotate">Tap on the buttons to rotate the image left or right.</string>
    <string name="help_content_line">Draw a straight line.</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save Changes?</string>
    <string name="closing_catroid_security_question_title">Back to Pocket Code</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_new_image_empty_image">Empty Image</string>
    <string name="menu_item_tools">Tools menu</string>
    <string name="menu_hide_menu">Fullscreen</string>
    <string name="menu_new_image_from_camera">New image from camera</string>

    <string name="menu_terms_of_use_and_service">Terms of Use</string>
    <string name="more">More</string>

    <string name="menu_about">About</string>
    <string name="menu_back">@string/closing_catroid_security_question_title</string>
	<string name="menu_export">Export</string><string name="saved">Image saved</string>
	<string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>

    <!--
    exclude preferences for release
        <string name="menu_preferences">Settings</string>
    <string name="preferences_tools">Active Tools</string>
    <string name="preferences_tools_summary">Activate/Deactivate tools.</string>
    <string name="preference_button_redo_summary">This is only affected if started from Pocket Code</string>
    <string name="preference_button_undo_summary">This is only affected if started from Pocket Code</string>
    <string name="preferences_language">Change Display Language</string>
    <string name="preferences_language_summary">Requires app restart.</string>
    <string name="preferences_language_key">preferences_language_key</string>
    <string name="preferences_language_dialog_reboot_warning_text">App restart required.</string>




    -->
    <string name="crop_algorithm_finish_text">to crop tap</string>
    <string name="crop_nothing_to_corp">nothing to crop</string>

    <!-- Extras -->
    <string name="extra_picture_path_catroid" translatable="false">org.catrobat.extra.PAINTROID_PICTURE_PATH</string>
    <string name="extra_picture_name_catroid" translatable="false">org.catrobat.extra.PAINTROID_PICTURE_NAME</string>
    <string name="extra_x_value" translatable="false" tools:ignore="UnusedResources">org.catrobat.extra.PAINTROID_X</string>
    <string name="extra_y_value" translatable="false" tools:ignore="UnusedResources">org.catrobat.extra.PAINTROID_Y</string>
    <!-- Return to Catroid -->
    <string name="temp_picture_name" translatable="false">catroidTemp</string>
    <string name="license_url" translatable="false">http://developer.catrobat.org/licenses</string>
    
    <string name="terms_of_use_and_service_url" translatable="false">http://developer.catrobat.org/terms_of_use_and_service</string>
    
    <string name="catroid_url" translatable="false">http://catrobat.org/</string>
    <string name="license_type_paintroid" translatable="false">GNU Affero General Public License, v3</string>
    <string name="dialog_unallowed_chars_title">Unallowed Character(s)</string>
    <string name="dialog_unallowed_chars_text">Only letters, numbers and \'_\' allowed.</string>
    <string name="dialog_shape_text">Shape</string>
    <string name="dialog_loading_image_failed_title">Error on loading image</string>
    <string name="dialog_loading_image_failed_text">Not a valid image file</string>
    

</resources>
