...
    <string name="help_content_watercolor">Similar to the brush tool with a watercolor effect. However you can also change the strength of the brush with the slider in the color menu.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
    <string name="help_content_fill">Tap on the image to fill an area with the selected color.</string>
    <string name="help_content_cursor">Position the cursor where you want to draw. Tap to activate the cursor. Move your finger to draw. Tap again to deactivate.</string>
    <string name="help_content_transform">Use to transform the image.</string>
    <string name="help_content_clipboard">Move and resize the rectangle to cover the area you want to stamp. Tap on copy or cut to select the area. Move it, then tap on paste to stamp.</string>
    <string name="help_content_import_png">Import an image from the gallery to the clipboard.</string>
    <string name="help_content_line">Draw a straight line.</string>
    <string name="help_content_text">Write text and format it. Resize the text box afterwards. Tap on the checkmark to insert the text on the image.</string>
    <string name="help_content_shape">Choose a shape and tap on the checkmark to insert the selected shape.</string>
    <string name="help_content_layer">Create new layers or modify existing ones.</string>
    <string name="help_content_color_chooser">Select or adjust a color.</string>
    <string name="help_content_hand">Move your finger to move the canvas.</string>
    <string name="help_content_spray_can">Move your finger on the image to create a spray can pattern.</string>
    <string name="help_content_smudge">Move your finger on the image on different drawings to smudge them.</string>
    <string name="help_content_clip">Mark area which should not be erased.</string>
...
